@@ -47,6 +47,7 @@ export(analog,
        dissimilarities,
        distance,
        distance3,
+       #distanceX,
        fuse,
        getK,
        gradientDist,
